# Sirius_Wheel_SDK

./: .gitignore  CMakeLists.txt  README.md  main.cpp  send_to_plus.sh
include/: beast_usb2can.h  cppTypes.h  hardware_types.h  orientation_tools.h  rt_rc_interface.h  rt_usb_imu.h  spi_command_t.hpp  spi_data_t.hpp  std_cout_colors.h
lcm-types/: file_list.txt  imu_t.lcm  leg_control_command_lcmt.lcm  leg_control_data_lcmt.lcm
lcm-types/cpp/: gamepad_lcmt.hpp  imu_lcmt.hpp  leg_control_command_lcmt.hpp  leg_control_data_lcmt.hpp
lcm-types/lcmtypes/: gamepad_lcmt.java  imu_lcmt.java  leg_control_command_lcmt.java  leg_control_data_lcmt.java
lcm-types/python/: gamepad_lcmt.py  imu_lcmt.py  leg_control_command_lcmt.py  leg_control_data_lcmt.py
scripts/: lcmlog-2025-01-15.00  lcmlog-2025-01-15.01
src/: PeriodicTask.cpp  beast_usb2can.cpp  rt_rc_interface.cpp  rt_usb_imu.cpp  utilities.cpp
